--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,3 +2,5 @@ export(ClassicalMetaAnalysis)
 export(SelectionModels)
 export(BayesianMetaAnalysis)
 export(RobustBayesianMetaAnalysis)
+  import('RoBMA');
+  import('weightr');
