--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 os: osx
 language: r
 r: 3.6.1
-before_install: 
+before_install:
   - "git clone --branch=MacOS-Original https://github.com/jasp-stats/jasp-required-files.git ~/pkgs"
 install:
   - rm '/usr/local/bin/gfortran'
   - brew install jags
-  - RScript -e ".libPaths(c(.libPaths(), '~/pkgs')); install.packages('remotes'); remotes::install_github('jasp-stats/jaspTools')"
+  - RScript -e ".libPaths(c(.libPaths(), '~/pkgs')); install.packages('remotes'); remotes::install_github('jasp-stats/jaspTools', upgrade = 'never')"
 script:
   - R < tests/testthat.R --no-save
 env:
