--- a/travis.yml
+++ b/travis.yml
@@ -6,7 +6,7 @@ before_install:
 install:
   - rm '/usr/local/bin/gfortran'
   - brew install jags
-  - RScript -e ".libPaths(c(.libPaths(), '~/pkgs')); install.packages('remotes'); remotes::install_github('jasp-stats/jaspTools')"
+  - RScript -e ".libPaths(c(.libPaths(), '~/pkgs')); install.packages('remotes'); remotes::install_github('jasp-stats/jaspTools', upgrade = 'never')"
 script:
   - R < tests/testthat.R --no-save
 env:
