adding WAAP-WLS & PET-PEESE + small improvements to selection models

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,6 @@
 import(jaspBase)
 export(ClassicalMetaAnalysis)
 export(SelectionModels)
+export(WaapWlsPetPeese)
 export(BayesianMetaAnalysis)
 export(RobustBayesianMetaAnalysis)
