--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -9,8 +9,15 @@ name: generate-translations
 jobs:
   generate-translations:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.REPO_KEY }}
+      WEBLATE_KEY: ${{ secrets.WEBLATE_KEY }}
+      QML_REPO: jaspmetaanalysis-qml
+      R_REPO: jaspmetaanalysis-r
 
     steps:
+      - uses: jasp-stats/jasp-actions/wlcLock@master
+      
       - uses: actions/checkout@v2
         with:
           token: ${{ secrets.REPO_KEY }}
@@ -20,5 +27,3 @@ jobs:
           r-version: "4.0.5"
 
       - uses: jasp-stats/jasp-actions/translations@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.REPO_KEY }}
