--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,4 +30,4 @@ Remotes:
   jasp-stats/jaspBase,
   jasp-stats/jaspGraphs,
   FBartos/BayesTools@3095a6d0f80348b8e274cb2e03f31c3d5f118f0b,
-  FBartos/RoBMA@3f242defe634d9dcee3fd6f82af59020e2eb28b7
+  JorisGoosen/RoBMA@3691a3e47c2f916c97fb7524248fc610d298bf33
