--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,5 @@ export(ClassicalMetaAnalysis)
 export(SelectionModels)
 export(BayesianMetaAnalysis)
 export(RobustBayesianMetaAnalysis)
+export(ClassicalPredictionPerformance)
+export(BayesianPredictionPerformance)
