Adding PET-PEESE & WAAP-WLS (#73)
* adding WAAP-WLS & PET-PEESE + small improvements to selection models

* fixing error on empty tables

* updating selection models tests to deal with the N > 4 check

* splitting WAAP-WLS and PET-PEESE

* update unit tests

* updating themeJasp -> themeJaspRaw

* updates based on review

* putting gettext back for ChSq and df

* updating geom_point

* Selection models to the bottom

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,8 @@
 import(jaspBase)
 export(ClassicalMetaAnalysis)
 export(SelectionModels)
+export(WaapWls)
+export(PetPeese)
 export(BayesianMetaAnalysis)
 export(RobustBayesianMetaAnalysis)
 export(.ClassicalMetaAnalysisCommon)
