Adding Meta-Analysis of Prediction Model Performance (Utrecht project) (#75)
* code

* unit tests

* adding input check

* Apply suggestions from code review

Co-authored-by: Don van den Bergh <donvdbergh@hotmail.com>

* unit tests code updates

* propagating qml: == -> === / :

* jaspGraphs::themeJasp() -> jaspGraphs::themeJaspRaw()

* remaining changes from the review

* remaining unit test changes due to jaspRaw

* menu vs. title update

* updating error handling

* remove unicode from checks

* disable funnel plots in qml

* fix prior UI scaling

* fix Gelman-Rubin title

* fix legend of Gelman-Rubin plot

* updating error handling

* funnel asymmetry test/plot handling

* removing gettext from "p"

(as suggested by Koen elsewhere)

* translations + plot

* increasing width of the forest plot

* fixing data export

* fixing a wrong dependency

Co-authored-by: Don van den Bergh <donvdbergh@hotmail.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,7 @@ export(WaapWls)
 export(PetPeese)
 export(BayesianMetaAnalysis)
 export(RobustBayesianMetaAnalysis)
+export(ClassicalPredictionPerformance)
+export(BayesianPredictionPerformance)
 export(.ClassicalMetaAnalysisCommon)
 export(.BayesianMetaAnalysisCommon)
