Add EffectSizeConversion to NAMESPACE & basic R func

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,3 +9,4 @@ export(ClassicalPredictionPerformance)
 export(BayesianPredictionPerformance)
 export(.ClassicalMetaAnalysisCommon)
 export(.BayesianMetaAnalysisCommon)
+export(EffectSizeConversion)
