remove dependency on outdated GitHub BayesTools

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,5 +30,4 @@ Imports:
   ggmcmc
 Remotes:
   jasp-stats/jaspBase,
-  jasp-stats/jaspGraphs,
-  FBartos/BayesTools@3095a6d0f80348b8e274cb2e03f31c3d5f118f0b
+  jasp-stats/jaspGraphs
