full of debug stuff

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Imports:
   BayesTools,
   RoBMA,
   metamisc (>= 0.2.5),
-  ggmcmc
+  ggmcmc,
+  pema
 Remotes:
   jasp-stats/jaspBase,
   jasp-stats/jaspGraphs
