Add Binomial-Normal BMA Meta-Analysis (#218)
* compartmentalize RoBMA + BiBMA interface

* update qml

* R progress changes

* R progress changes

* R progress changes

* fixes

* Update bayesianmetaanalysisbinomial.R

* fixes from code review

* add better MCMC Diagnostics plots handling

fixes: https://github.com/jasp-stats/INTERNAL-jasp/issues/2129
fixes: https://github.com/jasp-stats/INTERNAL-jasp/issues/1201

* update convergence checks and error messages

* rename analysis

* fix most of the unit test

* change update for removal and rebalance

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,4 @@ export(BayesianPredictionPerformance)
 export(.ClassicalMetaAnalysisCommon)
 export(.BayesianMetaAnalysisCommon)
 export(PenalizedMetaAnalysis)
+export(BayesianBinomialMetaAnalysis)
