effect sizes draft

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,3 +11,4 @@ export(.ClassicalMetaAnalysisCommon)
 export(.BayesianMetaAnalysisCommon)
 export(PenalizedMetaAnalysis)
 export(BayesianBinomialMetaAnalysis)
+export(EffectSizeComputation)
