--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,6 @@
 import(jaspBase)
 export(ClassicalMetaAnalysis)
+export(ClassicalMetaAnalysisMultilevelMultivariate)
 export(SelectionModels)
 export(WaapWls)
 export(PetPeese)
