funnel plot updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,4 @@ export(.BayesianMetaAnalysisCommon)
 export(PenalizedMetaAnalysis)
 export(BayesianBinomialMetaAnalysis)
 export(EffectSizeComputation)
+export(FunnelPlot)
