--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,6 @@
 import(jaspBase)
 export(ClassicalMetaAnalysis)
+export(ClassicalMetaAnalysisMultilevelMultivariate)
 export(SelectionModels)
 export(WaapWls)
 export(PetPeese)
@@ -11,3 +12,5 @@ export(.ClassicalMetaAnalysisCommon)
 export(.BayesianMetaAnalysisCommon)
 export(PenalizedMetaAnalysis)
 export(BayesianBinomialMetaAnalysis)
+export(EffectSizeComputation)
+export(FunnelPlot)
