--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,6 +33,7 @@ Imports:
   CompQuadForm,
   sp,
   dfoptim,
+  nleqslv,
   patchwork
 Remotes:
   jasp-stats/jaspBase,
@@ -40,3 +41,4 @@ Remotes:
 Depends: 
     R (>= 2.10)
 LazyData: true
+RoxygenNote: 7.3.2
