--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Imports:
   MASS,
   metaBMA (>= 0.6.3),
   metafor,
+  metaSEM,
   psych,
   purrr,
   rstan,
@@ -39,7 +40,8 @@ Remotes:
   jasp-stats/jaspBase,
   jasp-stats/jaspGraphs,
   FBartos/RoBMA@3lvl,
-  FBartos/BayesTools@diagnostics-fix
+  FBartos/BayesTools@diagnostics-fix,
+  jasp-stats/jaspSEM
 Depends: 
     R (>= 2.10)
 LazyData: true
