--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,4 @@ export(PenalizedMetaAnalysis)
 export(BayesianBinomialMetaAnalysis)
 export(EffectSizeComputation)
 export(FunnelPlot)
+export(MetaAnalyticSEM)
