--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,4 +13,4 @@ export(PenalizedMetaAnalysis)
 export(BayesianBinomialMetaAnalysis)
 export(EffectSizeComputation)
 export(FunnelPlot)
-export(MetaAnalyticSEM)
+export(SemBasedMetaAnalysis)
