add MASEM template

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,4 +13,5 @@ export(PenalizedMetaAnalysis)
 export(BayesianBinomialMetaAnalysis)
 export(EffectSizeComputation)
 export(FunnelPlot)
+export(MetaAnalyticSem)
 export(SemBasedMetaAnalysis)
