deprecate Bayesian Meta-Analysis and replace with NoBMA

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,10 @@ export(SelectionModels)
 export(WaapWls)
 export(PetPeese)
 export(BayesianMetaAnalysis)
+export(BayesianMetaAnalysisDeprecated)
 export(RobustBayesianMetaAnalysis)
 export(ClassicalPredictionPerformance)
 export(BayesianPredictionPerformance)
-export(.ClassicalMetaAnalysisCommon)
-export(.BayesianMetaAnalysisCommon)
 export(PenalizedMetaAnalysis)
 export(BayesianBinomialMetaAnalysis)
 export(EffectSizeComputation)
