--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,8 @@ Imports:
 Remotes:
   jasp-stats/jaspBase,
   jasp-stats/jaspGraphs,
-  FBartos/RoBMA@3lvl
+  FBartos/RoBMA@3lvl,
+  FBartos/BayesTools@diagnostics-fix
 Depends: 
     R (>= 2.10)
 LazyData: true
