Apply suggestions from code review
Co-authored-by: Julius Pfadt <38500953+juliuspfadt@users.noreply.github.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,7 @@ Remotes:
   jasp-stats/jaspGraphs,
   FBartos/RoBMA@3lvl,
   FBartos/BayesTools@diagnostics-fix,
-  jasp-stats/jaspSEM,
+  jasp-stats/jaspSem,
   mikewlcheung/metasem
 Depends: 
     R (>= 2.10)
