--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,6 @@ export(PenalizedMetaAnalysis)
 export(BayesianBinomialMetaAnalysis)
 export(EffectSizeComputation)
 export(FunnelPlot)
+export(MetaAnalyticSem)
+export(SemBasedMetaAnalysis)
+export(checkMetaModel)
