add Mantel-Haenszel / Peto

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,7 @@
 import(jaspBase)
 export(ClassicalMetaAnalysis)
 export(ClassicalMetaAnalysisMultilevelMultivariate)
+export(ClassicalMantelHaenszelPeto)
 export(SelectionModels)
 export(WaapWls)
 export(PetPeese)
